--- a/public/css/style.css
+++ b/public/css/style.css
@@ -116,3 +116,9 @@ table {
 #proyecto-table thead th:nth-child(2) {
     width: 30% !important;
 }
+
+tr td:last-child {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
