--- a/public/css/style.css
+++ b/public/css/style.css
@@ -216,11 +216,27 @@ ul {
 }
 
 .drag-item {
-  margin: 10px;
-  height: 100px;
-  background: rgba(0, 0, 0, 0.4);
-  -webkit-transition: all 0.3s cubic-bezier(0.23, 1, 0.32, 1);
-  transition: all 0.3s cubic-bezier(0.23, 1, 0.32, 1);
+    margin: 10px;
+    height: 110px;
+    background: rgba(0, 0, 0, 0.4);
+    -webkit-transition: all 0.3s cubic-bezier(0.23, 1, 0.32, 1);
+    transition: all 0.3s cubic-bezier(0.23, 1, 0.32, 1);
+    background: #353b3f;
+    color: #fff;
+    font-weight: bold;
+    padding: 5px;
+}
+#pendiente .drag-item {
+    border-left: 5px solid #fb7c44;
+}
+.users-columns .drag-item {
+    border-left: 5px solid #2A92BF;
+}
+#revision .drag-item {
+    border-left: 5px solid #F4CE46;
+}
+#aprobado .drag-item {
+    border-left: 5px solid #00B961;
 }
 .drag-item.is-moving {
   -webkit-transform: scale(1.5);
@@ -371,3 +387,14 @@ ul {
       width: 100%;
   }
 }
+
+.hidden {
+    display: none !important;
+}
+
+
+
+/*#content-message {
+    max-height: 50vh;
+    overflow-y: scroll;
+}*/
