--- a/public/css/style.css
+++ b/public/css/style.css
@@ -225,6 +225,13 @@ ul {
     color: #fff;
     font-weight: bold;
     padding: 5px;
+    position: relative;
+}
+.drag-item .weight {
+    position: absolute;
+    bottom: 2px;
+    right: 5px;
+    opacity: 0.8;
 }
 #pendiente .drag-item {
     border-left: 5px solid #fb7c44;
